kubernetes/prod/Aapp-prod-deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-app
  template:
    metadata:
      labels:
        app: worker-app
    spec:
      containers:
        - name: worker
          imagePullPolicy: Always
          image: bethanygrimm/exoplanet_api:1.0
          command: ["python", "src/worker.py"]
