kubernetes/prod/app-prod-deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask
          image: bethanygrimm/exoplanet_api:1.0
          command: ["src/api.py"]
          ports:
            - containerPort: 5000
