kubernetes/prod/app-prod-deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-pvc-deployment
  labels:
    app: redis-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-app
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
