kubernetes/prod/app-prod-pvc-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-pvc-deployment
  labels:
    app: redis-pvc-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-pvc-app
  template:
    metadata:
      labels:
        app: redis-pvc-app
    spec:
      containers:
        - name: redis
          image: ubuntu:22.04
          imagePullPolicy: Always
          command: ['app', 'redis']
          volumeMounts:
            - name: redis-itstylerbabess-data
              mountPath: "/data"
      volumes:
        - name: redis-itstylerbabess-data
          persistentVolumeClaim:
            claimName: redis-itstylerbabess-data
