kubernetes/prod/app-prod-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: exoplanet-flask-service
spec:
  type: ClusterIP
  selector:
    app: exoplanet-flask
  ports:
    - name: exoplanet-flask
      port: 5000
      targetPort: 5000
