kubernetes/prod/app-prod-service-nodeport-flask.yml
---
kind: Service
apiVersion: v1
metadata:
  name: exoplanet-flask-nodeport-service
spec:
  type: NodePort
  selector:
    app: exoplanet-flask
  ports:
    - port: 5000
      targetPort: 5000
