kubernetes/prod/app-prod-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: exoplanet-redis-service
spec:
  type: NodePort
  selector:
    app: redis-app
  ports:
    - name: redis-app
      port: 6379
      targetPort: 6379
