kubernetes/prod/app-prod-ingress-flask.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exoplanet-flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "itstylerbabess-flask.coe332.tacc.cloud"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: exoplanet-flask-service
                port:
                  number: 32634
